packages/ptyx/native/dart/include/ptyx_dart.h


typedef uint64_t PtydAdapter;
typedef PtydAdapter ptyd_adapter_t;
PTYX_EXPORT PtyxStatus PTYX_CALL ptyd_initialize(void *api_data);
PTYX_EXPORT PtyxStatus PTYX_CALL ptyd_runtime_attach(PtyxRuntime runtime,
                                                     int64_t port,
                                                     PtydAdapter *adapter,
                                                     PtyxError *error);
PTYX_EXPORT PtyxStatus PTYX_CALL ptyd_session_spawn_start(
    PtydAdapter adapter, const PtyxSpawnOptions *options,
    PtyxSession *session, PtyxError *error);
PTYX_EXPORT PtyxStatus PTYX_CALL ptyd_session_release(
    PtydAdapter adapter, PtyxSession *session, PtyxError *error);
PTYX_EXPORT PtyxStatus PTYX_CALL ptyd_event_ack(PtydAdapter adapter,
                                                PtyxEventToken token,
                                                PtyxError *error);
PTYX_EXPORT PtyxStatus PTYX_CALL ptyd_runtime_detach(PtydAdapter *adapter,
                                                     PtyxError *error);
PTYX_EXPORT void PTYX_CALL ptyd_runtime_finalize(void *token);
PTYX_EXPORT void PTYX_CALL ptyd_session_finalize(void *token);