packages/ptyx/lib/src/ffi/ptyx.g.dart

// ignore_for_file: type=lint
// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import
@ffi.DefaultAsset('package:ptyx/ptyx.dart')
library;

import 'dart:ffi' as ffi;

/// @brief Acknowledges one output event after Dart consumes its copied bytes.
///
/// Acknowledgement releases the C event and returns native output credit. Each
/// nonzero token must be acknowledged exactly once.
///
/// @param[in] adapter Owning adapter.
/// @param[in] token Nonzero output-event token.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK or a typed failure.
@ffi.Native<
  ffi.UnsignedInt Function(
    ptyd_adapter_t,
    ptyx_event_token_t,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyd_event_ack(
  int adapter,
  int token,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Initializes Dart API-DL for the current library artifact.
///
/// @param[in] api_data Dart NativeApi.initializeApiDLData.
/// @return PTYX_STATUS_OK or PTYX_STATUS_INVALID_ARGUMENT.
@ffi.Native<ffi.UnsignedInt Function(ffi.Pointer<ffi.Void>)>()
external int ptyd_initialize(ffi.Pointer<ffi.Void> api_data);

/// @brief Attaches the sole event pump and cleanup owner to a runtime.
///
/// @param[in] runtime Live runtime transferred to the adapter on success.
/// @param[in] port Dart native port receiving event arrays.
/// @param[out] adapter Receives the adapter handle.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK or a typed failure.
///
/// Each message is an eleven-element Dart array containing kind, session,
/// token, flags, value, error domain, error kind, error operation, native error
/// code, error flags, and nullable Uint8List data, in that order.
/// Output remains bounded by each session's configured native output capacity.
/// Withholding an acknowledgement applies backpressure only to that session;
/// the shared runtime continues fairly delivering other sessions' events.
///
/// After success, detach or finalization owns runtime shutdown and release.
@ffi.Native<
  ffi.UnsignedInt Function(
    ptyx_runtime_t,
    ffi.Int64,
    ffi.Pointer<ptyd_adapter_t>,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyd_runtime_attach(
  int runtime,
  int port,
  ffi.Pointer<ptyd_adapter_t> adapter,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Stops the pump and releases every resource transferred to it.
///
/// Shutdown wakes the blocked event read. The function joins the pump, releases
/// outstanding events and tracked sessions, shuts down and releases the
/// runtime, and clears adapter. Passing an already-zero handle succeeds.
///
/// @param[in,out] adapter Adapter handle, cleared on success.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK or a typed failure.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<ptyd_adapter_t>,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyd_runtime_detach(
  ffi.Pointer<ptyd_adapter_t> adapter,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Native finalizer for an adapter handle encoded as a pointer address.
///
/// Transfers ownership to a process-wide cleanup worker and returns without
/// waiting. The worker performs the same cleanup as detach and ignores
/// diagnostic output because no Dart owner remains.
///
/// @param[in] token Adapter handle encoded as a pointer-sized integer.
/// @return Nothing.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void ptyd_runtime_finalize(ffi.Pointer<ffi.Void> token);

/// @brief Native finalizer for a session handle encoded as a pointer address.
///
/// Transfers ownership to the process-wide cleanup worker and returns without
/// waiting. Cleanup is idempotent and generation checked, so it is safe when
/// explicit close or adapter teardown races finalization.
///
/// @param[in] token Session handle encoded as a pointer-sized integer.
/// @return Nothing.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void ptyd_session_finalize(ffi.Pointer<ffi.Void> token);

/// @brief Explicitly abandons and releases a tracked session.
///
/// @param[in] adapter Owning adapter.
/// @param[in,out] session Tracked handle, cleared on success.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK or a typed failure.
@ffi.Native<
  ffi.UnsignedInt Function(
    ptyd_adapter_t,
    ffi.Pointer<ptyx_session_t>,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyd_session_release(
  int adapter,
  ffi.Pointer<ptyx_session_t> session,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Atomically admits and transfers a session spawn to the adapter.
///
/// The pump cannot process SPAWN_READY or SPAWN_FAILED before it owns the
/// returned handle. The adapter releases the handle after SPAWN_FAILED or
/// CLOSE_COMPLETE, or during detach.
///
/// @param[in] adapter Owning adapter.
/// @param[in] options Validated, borrowed spawn options.
/// @param[out] session Receives the tracked session handle.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK or a typed failure.
@ffi.Native<
  ffi.UnsignedInt Function(
    ptyd_adapter_t,
    ffi.Pointer<ptyx_spawn_options_t>,
    ffi.Pointer<ptyx_session_t>,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyd_session_spawn_start(
  int adapter,
  ffi.Pointer<ptyx_spawn_options_t> options,
  ffi.Pointer<ptyx_session_t> session,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Returns the packed ABI major and minor version.
///
/// @return `(major << 16) | minor`.
///
/// @par Thread safety
/// Safe to call concurrently.
@ffi.Native<ffi.Uint32 Function()>()
external int ptyx_abi_version();

/// @brief Formats an error into caller-owned UTF-8 storage.
///
/// @param[in] error Error value to format.
/// @param[out] target Destination bytes, or NULL to query the required size.
/// @param[in] capacity Writable bytes at target.
/// @param[out] required Receives the required byte count excluding a trailing
/// NUL. May be NULL.
/// @return PTYX_STATUS_OK when the complete message was written,
/// PTYX_STATUS_BUFFER_TOO_SMALL when capacity is insufficient, or
/// PTYX_STATUS_INVALID_ARGUMENT for an invalid structure or pointer pair.
///
/// A successful write appends a NUL when capacity is greater than required.
/// No message contains spawn arguments, environment values, or input bytes.
///
/// @par Thread safety
/// Safe to call concurrently.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<ptyx_error_t>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint64>,
  )
>()
external int ptyx_error_format(
  ffi.Pointer<ptyx_error_t> error,
  ffi.Pointer<ffi.Uint8> target,
  int capacity,
  ffi.Pointer<ffi.Uint64> required,
);

/// @brief Releases one transferred event and its output credit.
///
/// @param[in,out] event Event returned by ptyx_runtime_next_event(). Every field
/// except the caller-provided struct_size is reset to zero on success so the
/// structure can be reused.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK, PTYX_STATUS_STALE_HANDLE for an invalid owning
/// token, or PTYX_STATUS_INVALID_ARGUMENT. A zero-initialized event succeeds.
///
/// @par Thread safety
/// Safe to call from a different thread than event receipt.
@ffi.Native<
  ffi.UnsignedInt Function(ffi.Pointer<ptyx_event_t>, ffi.Pointer<ptyx_error_t>)
>()
external int ptyx_event_release(
  ffi.Pointer<ptyx_event_t> event,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Returns capabilities implemented by a runtime.
///
/// @param[in] runtime Live runtime handle.
/// @param[out] capabilities Receives PTYX_CAPABILITY_* bits.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK or PTYX_STATUS_STALE_HANDLE.
///
/// @par Thread safety
/// Safe to call concurrently.
@ffi.Native<
  ffi.UnsignedInt Function(
    ptyx_runtime_t,
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyx_runtime_capabilities(
  int runtime,
  ffi.Pointer<ffi.Uint32> capabilities,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Creates an isolated PTY runtime.
///
/// @param[in] options Runtime options, or NULL for defaults.
/// @param[out] runtime Receives a nonzero generation handle on success.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK or a typed failure status.
///
/// The operation is transactional. On failure, runtime receives
/// PTYX_INVALID_RUNTIME and no native worker remains owned by the caller.
///
/// @par Blocking
/// May start native worker threads and a Unix broker.
/// @par Thread safety
/// Safe to call concurrently.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<ptyx_runtime_options_t>,
    ffi.Pointer<ptyx_runtime_t>,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyx_runtime_create(
  ffi.Pointer<ptyx_runtime_options_t> options,
  ffi.Pointer<ptyx_runtime_t> runtime,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Waits for and transfers ownership of the next fair runtime event.
///
/// @param[in] runtime Live runtime handle.
/// @param[in,out] event Zero-initialized event with struct_size set.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK, PTYX_STATUS_END_OF_STREAM after shutdown, or a
/// typed failure status.
///
/// Events are selected round-robin from per-session queues. Exactly one
/// logical consumer may call this function for a runtime. Runtime shutdown
/// wakes a blocked consumer. Passing an event that still owns a token returns
/// PTYX_STATUS_WRONG_STATE without changing the event.
///
/// @par Blocking
/// Blocks until an event or runtime shutdown is available.
/// @par Thread safety
/// Other runtime and session functions may run concurrently.
@ffi.Native<
  ffi.UnsignedInt Function(
    ptyx_runtime_t,
    ffi.Pointer<ptyx_event>,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyx_runtime_next_event(
  int runtime,
  ffi.Pointer<ptyx_event> event,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Releases a shut-down runtime handle.
///
/// @param[in,out] runtime Live handle to release. Receives
/// PTYX_INVALID_RUNTIME on success.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK, PTYX_STATUS_BUSY when shutdown has not converged,
/// or a typed failure status. Passing an already-zero handle succeeds.
///
/// All sessions and transferred events must be released first.
///
/// @par Thread safety
/// Do not race release with any operation using this runtime.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<ptyx_runtime_t>,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyx_runtime_release(
  ffi.Pointer<ptyx_runtime_t> runtime,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Starts deterministic shutdown and wakes the event consumer.
///
/// @param[in] runtime Live runtime handle.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK when shutdown converged. Repeated calls succeed.
///
/// @par Blocking
/// May wait for native owners and the Unix broker to terminate.
/// @par Thread safety
/// Do not race this function with another shutdown or release.
@ffi.Native<
  ffi.UnsignedInt Function(ptyx_runtime_t, ffi.Pointer<ptyx_error_t>)
>()
external int ptyx_runtime_shutdown(
  int runtime,
  ffi.Pointer<ptyx_error_t> error,
);
